# S1000D-Semantic-Interpreter

./: .clangd  .gitignore  CMakeLists.txt  README.md  improvements.md
include/: models.hpp
include/builders/: __elements__.hpp  content.hpp  dm_ref.hpp  dmodule.hpp  refs.hpp
include/builders_map/: builders_map.hpp
include/navigators/: node_builder.hpp  node_streamer.hpp  tree_traversor.hpp
include/registries/: models_registry.hpp
include/utils/: generic.hpp  s1000d.hpp  static_maps.hpp
interface/: interpreter.hpp
interface/definitions/: models.hpp
interface/models/: base.hpp  factory.hpp
interface/models/defs/: content.hpp  dm_ref.hpp  dmodule.hpp  external_pub_ref.hpp  ident_and_status_section.hpp  pm_ref.hpp  rdf__description.hpp  refs.hpp
src/: main.cpp
src/core/: CMakeLists.txt  interpreter.cpp
src/core/builders/: CMakeLists.txt  content.cpp  dm_ref.cpp  dmodule.cpp  refs.cpp
src/core/builders_map/: CMakeLists.txt  builders_map.cpp
src/core/navigators/: CMakeLists.txt  node_builder.cpp  node_streamer.cpp  tree_traversor.cpp
src/core/registries/: CMakeLists.txt  models_registry.cpp
src/core/utils/: CMakeLists.txt  generic.cpp  s1000d.cpp
